[package]
name = "actix-web-helloworld-example"
version = "0.1.0"
authors = ["Raphael Santo Domingo <raphael.santodomingo@target.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
